--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "googlebooks-app",
+  "name": "mern-book-search",
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
+    "start:server": "cd server && npm run watch",
+    "start:client": "cd client && npm start",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build"
